--- a/Python/030524.md
+++ b/Python/030524.md
@@ -1,5 +1,7 @@
 # Introduction to Python
  - High-level (Human Readable)
+    - Simple Error Correction
+    - Higher level of abstraction
  - Interpreted
  - General-purpose programming language
  - Guido Van  Rossum (creator) - 1991
