--- a/Python/030524.md
+++ b/Python/030524.md
@@ -4,5 +4,7 @@
     - Higher level of abstraction
  - Interpreted
  - General-purpose programming language
- - Guido Van  Rossum (creator) - 1991
+ - Guido Van  Rossum (creator) 
+    - 1991
+    - BDFL (Benevolent Dictator For Life)
  - Emphasizes code readability with significant indentation.
