--- a/Python/030524.md
+++ b/Python/030524.md
@@ -1,4 +1,4 @@
-# Introduction to Python
+# Introduction to Python:
  - High-level (Human Readable)
     - Simple Error Correction
     - Higher level of abstraction
@@ -8,3 +8,7 @@
     - 1991
     - BDFL (Benevolent Dictator For Life)
  - Emphasizes code readability with significant indentation.
+
+ # Design  Philosophy:
+    - Do one thing and do it well - UNIX
+    ![Design Philosophy](./designphilosophy.png)
