--- a/Python/030524.md
+++ b/Python/030524.md
@@ -10,5 +10,8 @@
  - Emphasizes code readability with significant indentation.
 
  # Design  Philosophy:
-    - Do one thing and do it well - UNIX
+    Do one thing and do it well - UNIX
 ![Design Philosophy](./designphilosophy.png)
+ 
+ # Major Milestones:
+
