--- a/Python/030524.md
+++ b/Python/030524.md
@@ -14,4 +14,9 @@
 ![Design Philosophy](./designphilosophy.png)
  
  # Major Milestones:
+    - Python 2.0 (2000)
+        - Introduced list comprehensions
+        - Garbage Collection, to deallocate memory that is no longer required by the program.
+    -  Python 3.0 (2008)
+![Python 3.0](./python3transition.png)
 
