--- a/Python/030524.md
+++ b/Python/030524.md
@@ -16,7 +16,8 @@
  # Major Milestones:
     - Python 2.0 (2000)
         - Introduced list comprehensions
-        - Garbage Collection, to deallocate memory that is no longer required by the program.
+        - Garbage Collection, to deallocate memory in RAM that is no longer required by the program.
     -  Python 3.0 (2008)
+        - Disadv: Backward compatibility issues, many libraries are written for Python  2.x versions.
 ![Python 3.0](./python3transition.png)
 
