--- a/Python/030524.md
+++ b/Python/030524.md
@@ -6,7 +6,7 @@
  - General-purpose programming language
  - Guido Van  Rossum (creator) 
     - 1991
-    - BDFL (Benevolent Dictator For Life)
+    - BDFL (Benevolent Dictator For Life) - Until 2020
  - Emphasizes code readability with significant indentation.
 
  # Design  Philosophy:
@@ -18,6 +18,7 @@
         - Introduced list comprehensions
         - Garbage Collection, to deallocate memory in RAM that is no longer required by the program.
     -  Python 3.0 (2008)
-        - Disadv: Backward compatibility issues, many libraries are written for Python  2.x versions.
+        - Disadv: Backward compatibility issues, many libraries are written for Python 2.x versions.
 ![Python 3.0](./python3transition.png)
+![Use Cases](./usecases.png)
 
