--- a/Python/030524.md
+++ b/Python/030524.md
@@ -20,5 +20,10 @@
     -  Python 3.0 (2008)
         - Disadv: Backward compatibility issues, many libraries are written for Python 2.x versions.
 ![Python 3.0](./python3transition.png)
+
+# Popularity and Use  Cases:
 ![Use Cases](./usecases.png)
+
+# Applications:
+![Applications](./applications.png)
 
