--- a/Python/030524.md
+++ b/Python/030524.md
@@ -1,4 +1,5 @@
-# Introduction to Python:
+# Python - 03-05-2024
+## Introduction to Python:
  - High-level (Human Readable)
     - Simple Error Correction
     - Higher level of abstraction
@@ -9,11 +10,11 @@
     - BDFL (Benevolent Dictator For Life) - Until 2020
  - Emphasizes code readability with significant indentation.
 
- # Design  Philosophy:
+ ## Design  Philosophy:
     Do one thing and do it well - UNIX
 ![Design Philosophy](./designphilosophy.png)
  
- # Major Milestones:
+ ## Major Milestones:
     - Python 2.0 (2000)
         - Introduced list comprehensions
         - Garbage Collection, to deallocate memory in RAM that is no longer required by the program.
@@ -21,9 +22,12 @@
         - Disadv: Backward compatibility issues, many libraries are written for Python 2.x versions.
 ![Python 3.0](./python3transition.png)
 
-# Popularity and Use  Cases:
+## Popularity and Use  Cases:
 ![Use Cases](./usecases.png)
 
-# Applications:
+## Applications:
 ![Applications](./applications.png)
+
+## Community & Philosophy
+![Community](./community.png)
 
