--- a/Python/030524.md
+++ b/Python/030524.md
@@ -28,6 +28,10 @@
 ## Applications:
 ![Applications](./applications.png)
 
-## Community & Philosophy
+## Community & Philosophy:
 ![Community](./community.png)
+
+## Coding
+>[text](https://replit.com/)
+
 
