--- a/Python/030524.md
+++ b/Python/030524.md
@@ -32,6 +32,7 @@
 ![Community](./community.png)
 
 ## Coding
->[text](https://replit.com/)
+>[Replit](https://replit.com/)
+>Real - Eval - Print - Loop
 
 
