--- a/Python/030524.md
+++ b/Python/030524.md
@@ -35,4 +35,11 @@
 >[Replit](https://replit.com/)
 >Real - Eval - Print - Loop
 
+## 5 Pillars of Code Quality
+1. Readability
+2. Simplicity
+3. Modularity
+4. Documentation
+5. Performance
+
 
