--- a/Python/030524.md
+++ b/Python/030524.md
@@ -32,8 +32,8 @@
 ![Community](./community.png)
 
 ## Coding
->[Replit](https://replit.com/)
->Real - Eval - Print - Loop
+>[Replit -> ](https://replit.com/)
+    >Real - Eval - Print - Loop
 
 ## 5 Pillars of Code Quality
 1. Readability
