--- a/Python/030524.md
+++ b/Python/030524.md
@@ -36,10 +36,10 @@
     >Real - Eval - Print - Loop
 
 ## 5 Pillars of Code Quality
-1. Readability
-2. Simplicity
-3. Modularity
-4. Documentation
+1. Readability - 75%
+2. Maintainability
+3. Extendability
+4. Testability
 5. Performance
 
 
