--- a/Python/030524.md
+++ b/Python/030524.md
@@ -1,4 +1,4 @@
-# Python - 03-05-2024
+# Python - 03-05-2024(Day - 08)
 ## Introduction to Python:
  - High-level (Human Readable)
     - Simple Error Correction
@@ -31,7 +31,7 @@
 ## Community & Philosophy:
 ![Community](./community.png)
 
-## Coding
+## Coding:
 >[Replit -> ](https://replit.com/)
     >Real - Eval - Print - Loop
 
@@ -41,5 +41,7 @@
 3. Extendability
 4. Testability
 5. Performance
+
+> Never sacrifice readability for performance!
 
 
